add img and code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <main class="container">
+    <div class="container" style="background-color: rgb(241, 216, 161);">
         <section class="delivery-info">
             <div class="delivery-info__item">
                 <img src="assets/img/1.webp" alt="" />
@@ -31,7 +31,18 @@
                 <p class="item_info">Sürətli, təhlükəsiz və təmassız</p>
             </div>
         </section>
-    </main>
+    </div>
+
+    <header class="flex_container">
+        <div class="logo_container">
+            <img src="assets/img/" alt="logo">
+            <p>Logo</p>
+        </div>
+
+
+    </header>
+
+
 </body>
 
 </html>
