added some code

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 </head>
 
 <body>
-    <div class="container" style="background-color: rgb(241, 216, 161);">
+    <div class="container" style="background-color: rgb(241, 216, 161)">
         <section class="delivery-info">
             <div class="delivery-info__item">
                 <img src="assets/img/1.webp" alt="" />
 
                 <p class="item_title">Qapıda rəsmiləşdirmə</p>
-                <p class="item_info">Nağd, hissə-hissə və ya kartla ödəmə imkanı ilə</p>
+                <p class="item_info">
+                    Nağd, hissə-hissə və ya kartla ödəmə imkanı ilə
+                </p>
             </div>
 
             <div class="delivery-info__item">
@@ -33,16 +35,93 @@
         </section>
     </div>
 
-    <header class="flex_container">
-        <div class="logo_container">
-            <img src="assets/img/" alt="logo">
-            <p>Logo</p>
-        </div>
 
 
-    </header>
+
+    <div class="second_con" style="margin: 10px; background-color:darkslategray">
+
+        <header id="header">
+            <div class="logo_content">
+                <img src="assets/img/game.jpg" alt="logo" />
+                <h1>Logo</h1>
+            </div>
+
+            <div class="button_groups">
+                <a class="register_but" href="">Register</a>
+                <a class="login_but" href="#">Login</a>
+                <a class="search_but" href="#">Search</a>
+            </div>
+        </header>
 
 
+
+        <nav class="navbar">
+            <ul>
+                <li class="box1">
+                    <a href="./index.html">Home</a>
+                </li>
+
+                <li class="box2">
+                    <a href="#about">About</a>
+                </li>
+
+                <li class="box3">
+                    <a href=" #contact ">Contact</a>
+                </li>
+
+                <li class="box4 ">
+                    <a href="#blog">Blog</a>
+                </li>
+            </ul>
+        </nav>
+
+
+        <main class="footer_container">
+            <section id="about">
+                <div class="about_info">
+                    <h2>About us</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit quidem distinctio voluptas corporis placeat praesentium. Sed assumenda sapiente eius asperiores voluptatem et quidem voluptas corporis placeat praesentium epellendus,sapiente consectetur adipisicing.
+                    </p>
+                </div>
+
+                <div class="about">
+                    <img src="assets/img/IT_2.jpg" alt="about">
+                </div>
+
+            </section>
+
+            <section id="contact">
+                <div class="about_info">
+                    <h2>Contact us</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit quidem distinctio voluptas corporis placeat praesentium. Sed assumenda sapiente eius asperiores voluptatem et quidem voluptas corporis placeat praesentium epellendus,sapiente consectetur adipisicing.
+                    </p>
+                </div>
+
+                <div class="about">
+                    <img src="assets/img/IT_3.jpg" alt="about">
+                </div>
+
+            </section>
+
+            <section id="blog">
+                <div class="about_info">
+                    <h2>Blog</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit quidem distinctio voluptas corporis placeat praesentium. Sed assumenda sapiente eius asperiores voluptatem et quidem voluptas corporis placeat praesentium epellendus,sapiente consectetur adipisicing.
+                    </p>
+                </div>
+
+                <div class="about">
+                    <img src="assets/img/IT.jpg" alt="about">
+                </div>
+
+            </section>
+
+
+        </main>
+    </div>
 </body>
 
 </html>
